update jupyter notebook

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -1146,6 +1146,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download [VGG16 bottleneck features](s3-us-west-1.amazonaws.com/udacity-aind/dog-project/DogVGG16Data.npz) and save it to the folder named `bottleneck_fatures`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
